--- a/blocks/advantages/advantages.css
+++ b/blocks/advantages/advantages.css
@@ -8,12 +8,12 @@
   max-width: var(--width-max);
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 40% 60%;
+  grid-template-columns: 2fr 3fr;
   grid-template-rows: min-content 1fr;
   grid-template-areas:
-  "button button"
-  "text phones"
-  "reviews phones";
+    'button button'
+    'text phones'
+    'reviews phones';
   gap: 60px 50px;
 }
 
@@ -49,15 +49,15 @@
 .advantages__review_pos_left {
   grid-template-columns: min-content 1fr;
   grid-template-areas:
-  "review review"
-  "avatar name";
+    'review review'
+    'avatar name';
 }
 
 .advantages__review_pos_right {
   grid-template-columns: 1fr min-content;
   grid-template-areas:
-  "review review"
-  "name avatar";
+    'review review'
+    'name avatar';
 }
 
 .advantages__quote {
@@ -224,9 +224,9 @@
   .advantages__container {
     grid-template-columns: 1fr 1fr;
     grid-template-areas:
-    "button button"
-    "text phones"
-    "reviews reviews";
+      'button button'
+      'text phones'
+      'reviews reviews';
   }
 
   .advantages__phones {
@@ -239,7 +239,6 @@
   }
 }
 
-
 @media screen and (max-width: 700px) {
   .advantages {
     padding: 20px 0 0;
@@ -251,10 +250,10 @@
     grid-template-columns: 100%;
     grid-template-rows: auto;
     grid-template-areas:
-    "button"
-    "text"
-    "phones"
-    "reviews";
+      'button'
+      'text'
+      'phones'
+      'reviews';
     gap: 0;
   }
 
@@ -267,7 +266,7 @@
   }
 
   .advantages__phones {
-    transition: all .8s ease-out;
+    transition: all 0.8s ease-out;
     margin-top: 32px;
   }
 
@@ -275,12 +274,11 @@
     min-width: 300px;
     aspect-ratio: 1 / 1.5;
     object-position: top;
-
   }
 
   .advantages__item {
     transform: scale(90%) translate(0, 5.5%);
-    transition: all .8s ease-out;
+    transition: all 0.8s ease-out;
   }
 
   .advantages__item_active {
