--- a/blocks/header/header.v2.css
+++ b/blocks/header/header.v2.css
@@ -78,7 +78,7 @@
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   overflow: hidden;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   align-self: flex-start;
   margin: 4px 0 0 0;
