--- a/blocks/long-read/long-read.css
+++ b/blocks/long-read/long-read.css
@@ -216,8 +216,12 @@
     font-size: 14px;
   }
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 950px) {
   .long-read {
+  }
+
+  .long-read__title {
+    margin: 0 auto 20px;
   }
   .long-read__container {
     position: relative;
