--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+  overflow: scroll;
   position: fixed;
   top: 0;
   left: 0;
@@ -7,7 +8,6 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
   display: flex;
-  align-items: center;
   justify-content: center;
   visibility: hidden;
   opacity: 0;
@@ -23,6 +23,7 @@
   border-radius: 20px;
   display: grid;
   max-width: 60%;
+  margin: auto;
 }
 .popup__header {
   display: flex;
@@ -99,8 +100,6 @@
   display: grid;
   gap: 7px;
 }
-.popup__description-item {
-}
 .popup__information {
   grid-area: info;
   word-break: break-word;
@@ -124,7 +123,6 @@
 
 @media screen and (max-width: 700px) {
   .popup {
-    overflow: scroll;
     align-items: flex-start;
   }
   .popup__container {
