fix: fix popup height

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -12,6 +12,8 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.2s, opacity 0.2s ease-in-out;
+  box-sizing: border-box;
+  padding: 60px 0 30px;
 }
 .popup_is-opened {
   visibility: visible;
@@ -127,7 +129,6 @@
   }
   .popup__container {
     max-width: 90%;
-    margin: 60px 0 30px;
   }
   .popup__body {
     display: grid;
