--- a/blocks/optimization/optimization.css
+++ b/blocks/optimization/optimization.css
@@ -198,6 +198,9 @@
 .optimization__sublist {
   justify-content: flex-start;
   padding: 0 32px;
+  overflow-x: auto;
+  display: flex;
+  gap: 24px;
 }
 
 .optimization__list_pos_center,
@@ -404,5 +407,11 @@
     height: 154px;
     bottom: -20%;
     left: 5%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .optimization__sublist {
+    gap: 18px;
   }
 }
