fix: fix popup height

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -126,11 +126,10 @@
 @media screen and (max-width: 700px) {
   .popup {
     align-items: flex-start;
-    padding: 20px 0 0;
+    padding: 20px 0 110px;
   }
   .popup__container {
     max-width: 90%;
-    margin: auto auto 70px;
   }
   .popup__body {
     display: grid;
