--- a/blocks/optimization/optimization.css
+++ b/blocks/optimization/optimization.css
@@ -164,7 +164,15 @@
   text-transform: uppercase;
   color: var(--color-secondary);
 }
-
+.optimization__choice-title {
+  max-width: 350px;
+  margin: 0 0 24px;
+  padding: 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 120%;
+}
 .optimization__subtitle {
   max-width: 350px;
   margin: 0 0 24px;
@@ -173,8 +181,6 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 120%;
-  text-transform: uppercase;
-  color: var(--color-secondary);
 }
 
 .optimization__subtitle_type_black,
