--- a/blocks/social-intro/social-intro.v8.css
+++ b/blocks/social-intro/social-intro.v8.css
@@ -13,22 +13,31 @@
   background: linear-gradient(113.85deg, #f8f9fd 16.26%, #f2f2fc 50.24%);
 }
 
-.social-intro_type_social:before,
-.social-intro_type_social:after {
+.social-intro__wrapper {
+  position: relative;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+.social-intro__wrapper_type_social:before,
+.social-intro__wrapper_type_social:after {
   content: '';
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   position: absolute;
+  background-repeat: no-repeat;
 }
 
-.social-intro_type_social::before {
+.social-intro__wrapper_type_social::before {
   width: 315px;
   height: 315px;
   top: -5%;
   right: 3%;
   transform: rotate(10deg) translate(15%, -15%);
 }
-.social-intro_type_social::after {
+.social-intro__wrapper_type_social::after {
   width: 114px;
   height: 114px;
   top: 10%;
@@ -36,40 +45,46 @@
   transform: rotate(-15deg) translate(15%, -15%);
 }
 
-.social-intro_type_tg::before,
-.social-intro_type_tg::after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp');
+.social-intro__wrapper_type_tg::before,
+.social-intro__wrapper_type_tg::after {
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp'); */
+  background-image: url('../../images/bg-social/tg/bg-telegram-head.webp');
 }
 
-.social-intro_type_vk::before,
-.social-intro_type_vk::after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp');
+.social-intro__wrapper_type_vk::before,
+.social-intro__wrapper_type_vk::after {
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp'); */
+  background-image: url('../../images/bg-social/vk/bg-vk-head.webp');
 }
 
-.social-intro_type_yt::before,
-.social-intro_type_yt::after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp');
+.social-intro__wrapper_type_yt::before,
+.social-intro__wrapper_type_yt::after {
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp'); */
+  background-image: url('../../images/bg-social/yt/bg-yt-head.webp');
 }
 
-.social-intro_type_tt::before,
-.social-intro_type_tt::after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp');
+.social-intro__wrapper_type_tt::before,
+.social-intro__wrapper_type_tt::after {
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp'); */
+  background-image: url('../../images/bg-social/tt/bg-tt-head.webp');
 }
 
-.social-intro_type_ig::before,
-.social-intro_type_ig::after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp');
+.social-intro__wrapper_type_ig::before,
+.social-intro__wrapper_type_ig::after {
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp'); */
+  background-image: url('../../images/bg-social/ig/bg-ig-head.webp');
 }
 
-.social-intro_type_thr::before,
-.social-intro_type_thr::after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp');
+.social-intro__wrapper_type_thr::before,
+.social-intro__wrapper_type_thr::after {
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram-head.webp'); */
+  background-image: url('../../images/bg-social/ig/bg-ig-head.webp');
 }
 
-.social-intro__container {
+.social-intro__content {
   max-width: var(--width-max);
   width: 100%;
-  margin: 0 auto;
+  margin: auto auto 0;
   display: grid;
   grid-template-columns: 3fr 2fr;
   align-items: end;
@@ -78,12 +93,14 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  align-self: center;
+  align-self: start;
+  padding: 40px 0 150px;
 }
 .social-intro__container-image {
   position: relative;
   display: flex;
   justify-content: flex-end;
+  z-index: 1;
 }
 .social-intro__title {
   color: var(--color-dark);
@@ -105,7 +122,7 @@
   border-radius: 15px;
   position: absolute;
   display: grid;
-  gap: 14px 36px;
+  gap: 14px 32px;
   align-items: center;
   grid-template-areas:
     'title title'
@@ -116,7 +133,7 @@
 .social-intro__social_pos_up {
   z-index: 1;
   right: 200px;
-  top: 10%;
+  top: 17%;
 }
 .social-intro__social_pos_up::after {
   content: '';
@@ -132,7 +149,7 @@
 .social-intro__social_pos_buttom {
   z-index: 0;
   right: 300px;
-  top: 30%;
+  top: 37%;
 }
 .social-intro__social_pos_buttom::after {
   content: '';
@@ -175,13 +192,13 @@
 }
 .social-intro__count {
   display: inline-block;
-  min-width: 93px;
+  min-width: 100px;
 }
 .social-intro__image {
   width: 350px;
   object-fit: cover;
   object-position: top;
-  aspect-ratio: 1 / 1.4;
+  aspect-ratio: 1 / 1.35;
 }
 
 @media screen and (max-width: 1160px) {
@@ -192,10 +209,10 @@
 
 @media screen and (max-width: 800px) {
   .social-intro {
-    padding: 90px 5px 0 30px;
+    padding: 0 5px 0 30px;
     margin-bottom: 50px;
   }
-  .social-intro__container {
+  .social-intro__content {
     grid-template-columns: 100%;
   }
   .social-intro__social {
@@ -203,17 +220,21 @@
     padding: 10px;
     border-radius: 9px;
   }
-  .social-intro::before {
+  .social-intro__wrapper::before {
     width: 110px;
     height: 110px;
-    top: 5%;
+    top: 0%;
   }
-  .social-intro::after {
+  .social-intro__wrapper::after {
     width: 41px;
     height: 41px;
     top: 25%;
     right: 5%;
     transform: rotate(-15deg) translate(15%, -15%);
+  }
+  .social-intro__container-text {
+    align-self: center;
+    padding: 40px 0 0px;
   }
   .social-intro__social_pos_up {
     right: 140px;
@@ -227,7 +248,7 @@
   .social-intro__social_pos_buttom {
     z-index: 0;
     right: 200px;
-    top: 30%;
+    top: 35%;
   }
   .social-intro__social_pos_buttom::after {
     top: 20px;
@@ -255,7 +276,7 @@
     width: 230px;
   }
   .social-intro__count {
-    min-width: 55px;
+    min-width: 57px;
   }
   .social-intro__text {
     margin: 0;
@@ -266,6 +287,6 @@
     left: 50%;
     transform: translate(-50%, 0%);
     white-space: nowrap;
-    z-index: 1;
+    z-index: 2;
   }
 }
