--- a/blocks/social/social.css
+++ b/blocks/social/social.css
@@ -17,6 +17,7 @@
   background-position: center;
   background-size: cover;
   position: absolute;
+  transform: rotate(10deg);
 }
 .social__container::before {
   top: 0;
@@ -28,27 +29,38 @@
 }
 .social__container_type_tg:before,
 .social__container_type_tg:after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp');
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp'); */
+  background-image: url('../../images/bg-social/tg/bg-telegram.webp');
 }
 
 .social__container_type_vk:before,
 .social__container_type_vk:after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp');
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp'); */
+  background-image: url('../../images/bg-social/vk/bg-vk.webp');
 }
 
 .social__container_type_ig:before,
 .social__container_type_ig:after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp');
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp'); */
+  background-image: url('../../images/bg-social/ig/bg-ig.webp');
 }
 
 .social__container_type_tt:before,
 .social__container_type_tt:after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp');
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp'); */
+  background-image: url('../../images/bg-social/tt/bg-tt.webp');
+}
+
+.social__container_type_yt:before,
+.social__container_type_yt::after {
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp'); */
+  background-image: url('../../images/bg-social/yt/bg-yt.webp');
 }
 
 .social__container_type_thr:before,
 .social__container_type_thr:after {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp');
+  /* background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/bg-telegram.webp'); */
+  background-image: url('../../images/bg-social/ig/bg-ig.webp');
 }
 .social__title {
   color: #2c2c2c;
