feat: add bg images for social pages

--- a/blocks/service-list/service-list.css
+++ b/blocks/service-list/service-list.css
@@ -48,6 +48,7 @@
   padding: 20px 12px;
   border: 1px solid var(--color-primary);
   border-radius: 12px;
+  margin: 15px 0;
 }
 .service-list__description-item {
   font-style: normal;
