--- a/blocks/social/social.css
+++ b/blocks/social/social.css
@@ -64,7 +64,7 @@
 .social__text {
   color: #2c2c2c;
   max-width: 560px;
-  margin: 0 auto;
+  margin: 0 auto 15px;
 }
 .social__subtitle {
   padding: 80px 0 20px;
