Update and rename service-popup.v1.css to service-popup.v2.css

--- a/style/service-popup.v2.css
+++ b/style/service-popup.v2.css
@@ -4,7 +4,7 @@
 }
 
 .popup.message__show{
-	padding: 80px 0;
+	padding: 20px 0;
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -20,7 +20,7 @@
 
 }
 .popup .message{
-	margin: 0px 0px 0px 0px;
+	margin: auto 0;
 	max-width: 90%;
 	z-index: 9999;
 	width: 100%;
@@ -80,6 +80,9 @@
 	line-height: 1.2;
 
 }  
+	.popup.message__show{
+	padding: 80px 0;
+}
 .message__top h2{
 	font-size: 14px;
 	padding-right: 30px;
