Update and rename new-style.v10.css to new-style.v11.css

--- a/style/new-style.v11.css
+++ b/style/new-style.v11.css
@@ -301,6 +301,9 @@ a:focus {
   margin: 0px 0px !important;
   padding: 10px !important;
 }
+.form-control_type_search {
+  padding: 10px 30px !important;
+}
 
 .container-switch {
   padding: 0px;
