--- a/style/new-style.v12.css
+++ b/style/new-style.v12.css
@@ -52,8 +52,8 @@
 @media only screen and (max-width: 650px) {
   .feedback p,
   .body_1 {
-    font-size: 14px !important;
-    line-height: 14px !important;
+    font-size: 14px;
+    line-height: 14px;
   }
   .element_text_title {
     font-size: 16px !important;
