--- a/style/crypto.v2.css
+++ b/style/crypto.v2.css
@@ -1,12 +1,12 @@
 @keyframes btn-copy-anim {
   0% {
-    left: 0;
+    right: 0;
   }
   50% {
-    left: 120%;
+    right: 120%;
   }
   100% {
-    left: 0;
+    right: 0;
   }
 }
 .crypto__list {
@@ -34,7 +34,7 @@
   position: absolute;
   z-index: 1;
   top: 0;
-  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   border-radius: 50%;
