--- a/style/common.css
+++ b/style/common.css
@@ -7,6 +7,19 @@
   cursor: pointer;
 }
 
+.tab {
+  padding: 5px 10px;
+  border-radius: 15px;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.1;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition: all var(--base-transition);
+}
+
 @media screen and (max-width: 600px) {
   .btn-rounded {
     width: 20px;
