--- a/style/typography.css
+++ b/style/typography.css
@@ -4,6 +4,12 @@
   font-weight: 600;
 }
 
+.title5 {
+  font-size: 16px;
+  line-height: 120%;
+  font-weight: 400;
+}
+
 .text1 {
   font-size: 14px;
   font-style: normal;
@@ -21,6 +27,10 @@
 @media screen and (max-width: 600px) {
   .title3-bold {
     font-size: 18px;
+  }
+
+  .title5 {
+    font-size: 14px;
   }
 
   .text1 {
