--- a/style/wallet-tutorial.css
+++ b/style/wallet-tutorial.css
@@ -1,14 +1,15 @@
 .wallet-tutorial {
   margin: calc(var(--space-primary) + 20px) auto;
-  max-width: 800px;
+  max-width: 1000px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .wallet-tutorial__list {
   list-style-type: none;
+  max-width: 800px;
   padding: 0;
-  margin: 0 0 80px;
+  margin: 0 auto 80px;
 }
 .wallet-tutorial__item {
   padding: 0 0 40px;
@@ -41,6 +42,7 @@
   margin: 0 0 40px;
   color: var(--color-dark);
 }
+
 .wallet-tutorial__text {
   grid-area: text;
   align-self: center;
@@ -60,6 +62,35 @@
 .wallet-tutorial__link-accent {
   text-decoration: none;
   color: var(--color-secondary);
+}
+.wallet-tutorial__nav-buttons {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.wallet-tutorial__tabs {
+  grid-area: tabs;
+  display: flex;
+  align-items: center;
+  align-self: start;
+  gap: 10px;
+}
+.wallet-tutorial__button-icon {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.wallet-tutorial__button-icon_type_instr {
+  background-image: url('../images/icons/text-icon.png');
+}
+.wallet-tutorial__button-icon_type_video {
+  background-image: url('../images/icons/video-icon.png');
+}
+.wallet-tutorial__intro-text {
+  grid-area: text;
 }
 .wallet-tutorial__count {
   grid-area: counter;
@@ -92,14 +123,23 @@
   margin: auto;
   position: relative;
 }
+.wallet-tutorial__tabs {
+  margin-bottom: 40px;
+}
+
 .wallet-tutorial__video-container {
-  display: flex;
+  display: grid;
+  grid-template-areas:
+    'tabs video'
+    'text video';
   justify-content: space-between;
   align-items: center;
+  grid-template-rows: min-content 1fr;
   gap: 30px;
   margin: 0 0 80px;
 }
 .wallet-tutorial__video {
+  grid-area: video;
   max-width: 800px;
   max-height: 400px;
   margin: 0 auto;
@@ -114,7 +154,7 @@
 
 @media screen and (max-width: 600px) {
   .wallet-tutorial {
-    margin: var(--space-primary) 30px var(--space-primary) 10px;
+    margin: var(--space-primary) 20px var(--space-primary);
     padding: 0;
   }
   .wallet-tutorial__item {
@@ -128,6 +168,18 @@
   .wallet-tutorial__count {
     width: 20px;
     height: 20px;
+  }
+  .wallet-tutorial__video-container {
+    grid-template-areas:
+      'tabs'
+      'text'
+      'video';
+    gap: 0px;
+    margin: 0 0 20px;
+  }
+  .wallet-tutorial__intro-text {
+    text-align: center;
+    margin: 0;
   }
   .wallet-tutorial__text-accent {
     padding: 1px 3px;
