--- a/style/service-popup.v7.css
+++ b/style/service-popup.v7.css
@@ -17,7 +17,7 @@
 	background: rgba(21, 41, 86, 0.4);
 	z-index: 999;
 	overflow: scroll;
-
+	visibility: visible;
 }
 .popup .message{
 	margin: auto 0 !important;
