Update and rename wallet-tutorial.css to wallet-tutorial.v1.css

--- a/style/wallet-tutorial.v1.css
+++ b/style/wallet-tutorial.v1.css
@@ -62,6 +62,10 @@
 .wallet-tutorial__link-accent {
   text-decoration: none;
   color: var(--color-secondary);
+  transition: color 0.4s ease-in-out;
+}
+.wallet-tutorial__link-accent:hover {
+  color: var(--color-secondary-hover);
 }
 .wallet-tutorial__nav-buttons {
   display: flex;
