--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -86,6 +86,16 @@
 .popup__image-container {
   margin: auto;
   position: relative;
+  max-height: 70vh;
+  max-width: 70vw;
+  height: 100%;
+  width: 100%;
+}
+.popup__image {
+  object-fit: contain;
+  object-position: center;
+  height: 100%;
+  width: 100%;
 }
 .popup__subtitle {
   margin: 0 0 16px;
