--- a/style/typography.v1.css
+++ b/style/typography.v1.css
@@ -1,3 +1,17 @@
+.title1-bold {
+  font-size: 46px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 120%;
+}
+
+.title2-bold {
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+}
+
 .title3-bold {
   font-size: 20px;
   line-height: 120%;
@@ -10,8 +24,21 @@
   font-weight: 400;
 }
 
+.title5-bold {
+  font-size: 16px;
+  line-height: 120%;
+  font-weight: 600;
+}
+
 .text1 {
   font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 120%;
+}
+
+.text2 {
+  font-size: 10px;
   font-style: normal;
   font-weight: 300;
   line-height: 120%;
@@ -25,16 +52,29 @@
 }
 
 @media screen and (max-width: 600px) {
+  .title1-bold {
+    font-size: 32px;
+  }
+
+  .title2-bold {
+    font-size: 26px;
+  }
+
   .title3-bold {
     font-size: 18px;
   }
 
-  .title5 {
+  .title5,
+  .title5-bold {
     font-size: 14px;
   }
 
   .text1 {
     font-size: 12px;
+  }
+
+  .text2 {
+    font-size: 8px;
   }
 
   .text1-bold {
