--- a/style/child-pannel.css
+++ b/style/child-pannel.css
@@ -143,6 +143,10 @@
   align-items: center;
 }
 
+.child-benefits__card-item_is-main {
+  width: 100%;
+}
+
 .child-benefits__card-title {
   margin: 0 0 20px;
   text-align: center;
