feat: add child-tutorial component

--- a/style/child-pannel.css
+++ b/style/child-pannel.css
@@ -305,25 +305,43 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
   box-sizing: border-box;
-  transition: background-color 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
+  overflow: hidden;
+  transition: background-color 0.4s ease-in-out, box-shadow 0.4s ease-in;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  /* border: 2px solid var(--color-primary); */
 }
 
 .child-tutorial:hover {
-  box-shadow: 0 10px 15px rgba(172, 176, 197, 0.43);
+  box-shadow: 0 10px 15px rgba(151, 156, 184, 0.43);
   background-color: var(--bg-color-primary);
 }
 
 .child-tutorial:hover .child-tutorial__image {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
 }
 
 .child-tutorial__title {
-  color: var(--color-dark);
+  color: #fff;
+  margin: 0;
+  display: flex;
   /* text-transform: uppercase; */
+}
+.child-tutorial__inner {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.child-tutorial__inner_type_title {
+  background-image: url('../images/recommend-bg.webp');
+  background-position: center;
+  background-size: cover;
+  padding: 30px 20px;
+}
+
+.child-tutorial__inner_type_image {
+  flex-basis: 20%;
+  justify-content: center;
 }
 
 .child-tutorial__image {
@@ -334,7 +352,7 @@
   padding: 0px;
   border-radius: 50%;
   transition: background-color 0.4s ease-in-out;
-  background-color: var(--color-primary);
+  background-color: var(--color-secondary);
 }
 @media screen and (max-width: 1161px) {
   .child-tutorial {
@@ -345,6 +363,11 @@
 @media screen and (max-width: 768px) {
   .child-tutorial {
     margin: var(--space-primary) 20px var(--space-primary);
-    padding: 15px;
+  }
+  .child-tutorial__inner_type_title {
+    padding: 30px 20px;
+  }
+  .child-tutorial__inner_type_image {
+    flex-basis: 25%;
   }
 }
