--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -69,8 +69,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   z-index: 10;
   padding: 20px 10px 5px;
   box-sizing: border-box;
