--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -66,9 +66,7 @@
 
 .reg-menu {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
   height: 100vh;
   width: 100vw;
   z-index: 10;
