--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -66,9 +66,13 @@
 
 .reg-menu {
   position: fixed;
-  inset: 0;
-  height: 100vh;
-  width: 100vw;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-height: 100vh;
+  max-width: 100vw;
+  height: 100%;
+  width: 100%;
   z-index: 10;
   padding: 20px 10px 5px;
   box-sizing: border-box;
