--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -131,8 +131,8 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(95, 93, 91, 0.139);
-  filter: blur(8px);
+  background-color: rgba(45, 44, 44, 0.2);
+  filter: blur(15px);
   z-index: -1;
 }
 
@@ -148,6 +148,7 @@
   cursor: pointer;
   color: var(--color-dark);
   text-align: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .reg-menu__short-item-accent {
