--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -132,7 +132,7 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(45, 44, 44, 0.2);
+  background-color: rgba(88, 86, 86, 0.2);
   filter: blur(15px);
   z-index: -1;
 }
@@ -233,6 +233,7 @@
   align-items: center;
   gap: 10px;
   color: var(--color-dark);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .reg-menu__long-icon {
