--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -74,7 +74,7 @@
   height: 100%;
   width: 100%;
   z-index: 10;
-  padding: 20px 15px 15px;
+  padding: 20px 15px 35px;
   box-sizing: border-box;
   display: grid;
   grid-template-rows: 1fr min-content;
@@ -93,9 +93,9 @@
     rgba(255, 255, 255, 0.3) 0%,
     rgba(255, 255, 255, 0.3) 100%
   );
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   z-index: -1;
-  backdrop-filter: 20px;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
